Added boss controller

--- a/ElsaLatest/ElsaLatest.csproj
+++ b/ElsaLatest/ElsaLatest.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
